# matmath

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  README.md  __init__.py  matmath-2.0.0-py3-none-any.whl  pyproject.toml  setup.py  vectors.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  release.yml
matmath/: __init__.py  _matrix.c  _vector.c  matrices.py  matrix.py  vector.py  vectors.py
matmath/legacy/: __init__.py  vector.py
src/matmath/: __init__.py  matmath.py  matrices.py  mmath.py  vectors.py
src/matmath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_import.py  test_matrix.py  test_vector.py  test_vector_parity.py  test_vectors.py
