[project]
name = "matmath"
version = "4.0.0"
description = "A simple and efficient module for matrix and vector manipulation with C extensions."
authors = [
    {name = "Siddhesh Agarwal", email = "siddhesh.agarwal@gmail.com"}
]
license = {text = "MIT" }
readme = "README.md"
keywords = ["matrix", "vector", "math", "linear algebra", "algebra", "matmath", "cpython", "performance"]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "setuptools>=80.10.2",
    "wheel>=0.46.3",
]

[project.urls]
Homepage = "https://github.com/Siddhesh-Agarwal/matmath"
Repository = "https://github.com/Siddhesh-Agarwal/matmath"

[tool.setuptools.packages.find]
where = ["."]
include = ["matmath*"]

[tool.pyrefly]
project-includes = ["matmath/*.py*"]

[dependency-groups]
dev = [
    "pyrefly>=0.50.1",
    "ruff>=0.14.14",
]
